--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -11,7 +11,7 @@ jobs:
         py-version: ["3.10", "3.11", "3.12"]
         exclude:
         - os: macos-14
-          version: 3.12
+          py-version: 3.12
     steps:
     - name: Set up Python on '${{ matrix.os }}'
       uses: actions/setup-python@v5
